--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@
 /src/Gateway/Spark.Ocelot.Consul/obj
 /src/Gateway/Spark.Ocelot.Remote/bin/Debug/netcoreapp2.1
 /src/Gateway/Spark.Ocelot.Remote/obj
+/src/Elasticsearch/Spark.Elasticsearch/bin/Debug/netcoreapp2.1
+/src/Elasticsearch/Spark.Elasticsearch/obj
