--- a/src/EventBus/Spark.EventBus.RabbitMQ/Spark.EventBus.RabbitMQ.csproj
+++ b/src/EventBus/Spark.EventBus.RabbitMQ/Spark.EventBus.RabbitMQ.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Polly" Version="6.1.2" />
+    <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Spark.EventBus\Spark.EventBus.csproj" />
+  </ItemGroup>
+
 </Project>
