--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,9 @@
 /samples/Spark.Samples.WebApi/bin/Debug/netcoreapp2.1
 /samples/Spark.Samples.WebApi/obj
 /.vs/config
+/samples/Spark.Samples.Tracer/bin/Debug/netcoreapp2.1
+/samples/Spark.Samples.Tracer/obj
+/src/Tracer/Spark.Tracer/bin/Debug/netcoreapp2.1
+/src/Tracer/Spark.Tracer/obj
+/src/Tracer/Spark.Tracer.EventBusStore/bin/Debug/netcoreapp2.1
+/src/Tracer/Spark.Tracer.EventBusStore/obj
