--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@
 /src/HealthCheck/Spark.HealthChecks.SqlServer/obj
 /samples/Spark.Samples.ApiGateway/bin/Debug/netcoreapp2.1
 /samples/Spark.Samples.ApiGateway/obj
+/src/Spark.Swagger/bin/Debug/netcoreapp2.1
+/src/Spark.Swagger/obj
