--- a/src/HealthCheck/Spark.HealthChecks/Spark.HealthChecks.csproj
+++ b/src/HealthCheck/Spark.HealthChecks/Spark.HealthChecks.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Spark.AspNetCore\Spark.AspNetCore.csproj" />
+  </ItemGroup>
+
 </Project>
