--- a/samples/Spark.Samples.WebApi/appsettings.Development.json
+++ b/samples/Spark.Samples.WebApi/appsettings.Development.json
@@ -2,8 +2,18 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "System": "Debug",
+      "Microsoft": "Debug"
+    }
+  },
+  "GlobalConfig": {
+    "EventBus": {
+      "RabbitMQ": {
+        "HostName": "192.168.0.236",
+        "Port": 5672,
+        "UserName": "testuser",
+        "Password": "testuser"
+      }
     }
   }
 }
