--- a/src/Config/Spark.Config.Api/appsettings.Development.json
+++ b/src/Config/Spark.Config.Api/appsettings.Development.json
@@ -5,5 +5,15 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+
+  "GlobalConfig": {
+    "Audience": {
+      "Secret": "917CF2CA-FEAA-455D-91F8-4131BC86CD98",
+      "Issuer": "https://guodaxia.com/",
+      "Audience": "guodaxia",
+      "Scope": "",
+      "ExpiryMinutes": 720
+    }
   }
 }
