--- a/src/Config/Spark.Config.Api/appsettings.Development.json
+++ b/src/Config/Spark.Config.Api/appsettings.Development.json
@@ -14,6 +14,12 @@
       "Audience": "guodaxia",
       "Scope": "",
       "ExpiryMinutes": 720
+    },
+    "ElasticsearchOptions": {
+      "Uri": "http://192.168.0.236:9200/",
+      "DefaultIndex": "logstash",
+      "UserName": null,
+      "Password": null
     }
   }
 }
